Constrain anchor-center to its containing block https://bugs.webkit.org/show_bug.cgi?id=294575 rdar://153569520

Reviewed by Alan Baradlay.

anchor-center tries to stay within its containing block if possible,
so it needs to be constrained to stay within its IMCB ideally, and
failing that to be constrained within its original containing block--
just like the other alignment modes. The calculations are different
because unlike other alignment modes, anchor-center's ideal position
can be outside its IMCB.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-fallback-transition-behavior-expected.txt: Update expectations
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-001-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-001.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-002-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-002-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-002.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-003-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-003-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-003.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-004-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-004-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-center-overflow-004.html: Added.
* Source/WebCore/rendering/PositionedLayoutConstraints.cpp:
(WebCore::PositionedLayoutConstraints::resolveAlignmentShift const): Update logic.

Canonical link: https://commits.webkit.org/297226@main